[tool.poetry]
name = "thanos-gen"
version = "0.1.0"
description = "THis ANOmaly is Synthetic: A recipe based timeseries data generator"
authors = ["lorne.schell <lorne.schell@servicenow.com>"]
license = "Apache-2.0"
packages = [
    {include = "thanos"}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = {version="^3.7.0", optional=true}
torch = {version="^2.0.0", optional=true}
seaborn = {version="^0.12.0", optional=true}
ipytest = {version="^0.13.0", optional=true}
scikit-learn = {version = "^1.2.0", optional = true}

[tool.poetry.extras]
notebook = ["matplotlib", "torch", "seaborn", "ipytest", "scikit-learn"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
